<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.celements</groupId>
    <artifactId>celements-parent-poms</artifactId>
    <version>7.2-SNAPSHOT</version>
  </parent>
  <artifactId>celements-parent</artifactId>
  <version>7.2-SNAPSHOT</version>
  <packaging>pom</packaging>
  <description>Celements parent POM</description>
  <properties>
    <release.version>${project.version}</release.version>
    <java.version>21</java.version>
    <nodejs.version>v24.11.1</nodejs.version>
    <celements.test.jvmArgs />
    <webapp.surefire.integration.skip>true</webapp.surefire.integration.skip>
  </properties>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.celements</groupId>
        <artifactId>celements-bom</artifactId>
        <version>7.2-SNAPSHOT</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-checkstyle-plugin</artifactId>
          <version>3.6.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.4.0</version>
          <configuration>
            <encoding>UTF-8</encoding>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.5.4</version>
          <configuration>
            <argLine>${celements.test.jvmArgs}</argLine>
            <redirectTestOutputToFile>true</redirectTestOutputToFile>
          </configuration>
          <executions>
            <execution>
              <phase>integration-test</phase>
              <goals>
                <goal>test</goal>
              </goals>
              <configuration>
                <skip>${webapp.surefire.integration.skip}</skip>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>3.4.0</version>
          <executions>
            <execution>
              <id>attach-sources</id>
              <phase>verify</phase>
              <goals>
                <goal>jar-no-fork</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>3.12.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.1.4</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.5.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-war-plugin</artifactId>
          <version>3.5.1</version>
          <configuration>
            <resourceEncoding>UTF-8</resourceEncoding>
            <webResources>
              <resource>
                <directory>src/main/webapp/WEB-INF</directory>
                <targetPath>WEB-INF</targetPath>
                <filtering>true</filtering>
                <includes>
                  <include>**/*.xml</include>
                  <include>**/*.cfg</include>
                  <include>**/*.properties</include>
                </includes>
              </resource>
              <resource>
                <directory>src/main/webapp/WEB-INF</directory>
                <targetPath>WEB-INF</targetPath>
                <filtering>false</filtering>
                <excludes>
                  <exclude>**/*.xml</exclude>
                  <exclude>**/*.cfg</exclude>
                  <exclude>**/*.properties</exclude>
                </excludes>
              </resource>
            </webResources>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-release-plugin</artifactId>
          <version>3.3.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.14.1</version>
          <configuration>
            <release>${java.version}</release>
            <encoding>UTF-8</encoding>
          </configuration>
        </plugin>
        <plugin>
          <groupId>com.github.eirslett</groupId>
          <artifactId>frontend-maven-plugin</artifactId>
          <version>1.15.4</version>
          <configuration>
            <installDirectory>target</installDirectory>
            <workingDirectory>.</workingDirectory>
            <nodeVersion>${nodejs.version}</nodeVersion>
          </configuration>
          <executions>
            <execution>
              <id>install node and npm</id>
              <goals>
                <goal>install-node-and-npm</goal>
              </goals>
              <phase>generate-resources</phase>
            </execution>
            <execution>
              <id>npm install</id>
              <goals>
                <goal>npm</goal>
              </goals>
              <phase>generate-resources</phase>
              <configuration>
                <arguments>install</arguments>
              </configuration>
            </execution>
            <execution>
              <id>npm build</id>
              <goals>
                <goal>npm</goal>
              </goals>
              <phase>generate-resources</phase>
              <configuration>
                <arguments>run build</arguments>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>com.jarslab.maven</groupId>
          <artifactId>babel-maven-plugin</artifactId>
          <version>1.6</version>
          <dependencies>
            <dependency>
              <!-- https://stackoverflow.com/a/75652825 -->
              <groupId>org.codehaus.plexus</groupId>
              <artifactId>plexus-utils</artifactId>
              <version>3.5.1</version>
            </dependency>
          </dependencies>
          <executions>
            <execution>
              <id>js-transpile</id>
              <phase>process-resources</phase>
              <goals>
                <goal>babel</goal>
              </goals>
              <configuration>
                <verbose>true</verbose>
                <threads>3</threads>
                <encoding>UTF-8</encoding>
                <babelSrc>
                  ${project.basedir}/node_modules/@babel/standalone/babel.min.js</babelSrc>
                <sourceDir>${project.basedir}/src/main/webapp/resources/</sourceDir>
                <targetDir>
                  ${project.build.directory}/${project.build.finalName}/resources/</targetDir>
                <jsIncludes>
                  <jsInclude>**/*.mjs</jsInclude>
                </jsIncludes>
                <jsExcludes>
                  <jsExclude>dist/**</jsExclude>
                </jsExcludes>
                <formatPresets>false</formatPresets>
                <presets>
                  ["env", {"modules": false, "targets": {"esmodules": true}}]
                </presets>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>3.5.0</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <executions>
          <execution>
            <id>enforce-banned-dependencies</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <bannedDependencies>
                  <excludes>
                    <exclude>org.xwiki.platform:xwiki-core-velocity</exclude>
                    <exclude>org.xwiki.platform:xwiki-core-rendering-api</exclude>
                    <exclude>org.xwiki.platform:xwiki-core-component-api</exclude>
                    <exclude>org.xwiki.platform:xwiki-core-rendering-xwiki</exclude>
                    <exclude>org.xwiki.platform:xwiki-core-component-api</exclude>
                    <exclude>org.xwiki.platform:xwiki-core-observation-api</exclude>
                    <exclude>org.xwiki.platform:xwiki-core</exclude>
                    <exclude>org.xwiki.platform:xwiki-core-xml</exclude>
                    <exclude>com.xpn.xwiki.platform.plugins:xwiki-plugin-mailsender</exclude>
                    <exclude>com.xpn.xwiki.platform.plugins:xwiki-plugin-skinx</exclude>
                    <exclude>commons-logging:commons-logging</exclude>
                  </excludes>
                  <message>Direct or transitive dependency on a banned artifact was detected.</message>
                </bannedDependencies>
              </rules>
              <fail>true</fail>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
    <extensions>
      <extension>
        <groupId>org.apache.maven.wagon</groupId>
        <artifactId>wagon-ssh-external</artifactId>
        <version>3.5.3</version>
      </extension>
    </extensions>
  </build>
  <repositories>
    <repository>
      <id>xwiki-externals</id>
      <name>XWiki Maven2 Remote Repository for Third Party Dependencies</name>
      <url>https://maven.xwiki.org/externals</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>xwiki-releases</id>
      <name>XWiki Maven2 Remote Repository for Releases</name>
      <url>https://maven.xwiki.org/releases</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>xwiki-snapshots</id>
      <name>XWiki Maven2 Remote Repository for Snapshots</name>
      <url>https://maven.xwiki.org/snapshots</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>celements-forge</id>
      <name>Celements Maven Repository</name>
      <url>${repo.url.celements}</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>jboss-thirdparty-releases</id>
      <name>JBoss Thirdparty Releases</name>
      <url>
        https://repository.jboss.org/nexus/content/repositories/thirdparty-releases</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>
  <pluginRepositories>
    <pluginRepository>
      <id>xwiki-plugins-externals</id>
      <name>XWiki Maven2 Plugin Remote Repository for Third Party Plugins</name>
      <url>https://maven.xwiki.org/externals</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </pluginRepository>
    <pluginRepository>
      <id>xwiki-plugins-releases</id>
      <name>XWiki Maven2 Plugin Remote Repository for Releases</name>
      <url>https://maven.xwiki.org/releases</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </pluginRepository>
    <pluginRepository>
      <id>xwiki-plugins-snapshots</id>
      <name>XWiki Maven2 Plugin Remote Repository for Snapshots</name>
      <url>https://maven.xwiki.org/snapshots</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </pluginRepository>
  </pluginRepositories>
  <profiles>
    <profile>
      <id>jdk24-test-args</id>
      <activation>
        <jdk>[24,)</jdk>
      </activation>
      <properties>
        <celements.test.jvmArgs>
          --sun-misc-unsafe-memory-access=allow
        </celements.test.jvmArgs>
      </properties>
    </profile>
    <profile>
      <id>disable-java8-doclint</id>
      <activation>
        <jdk>[1.8,)</jdk>
      </activation>
      <properties>
        <doclint>none</doclint>
      </properties>
    </profile>
  </profiles>
</project>
